@@ -1,3 +1,9 @@
+2009-02-08  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
+
+ * src/gui.c:
+   Remove unnecessary gpointer casts.
+
+
 2009-02-02  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
 
  * configure.in, Makefile.am:
